calc: squashed bugs, cleaned up aesthetics

--- a/calc/stylesheet.css
+++ b/calc/stylesheet.css
@@ -1,6 +1,13 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
 #container {
+    height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
